# Aussie-Rentals

./: .gitignore  CONVENTIONS.md  pyproject.toml
data/: data_sources.txt  postcodes sydney.txt  postcodes.txt  postcodes_of_interest.txt
src/: browser_controller.py  constants.py  main.py  scrape.py  test.py
tests/: test_browser_controller.py  test_wmctrl.py
